# code-bits

./: LICENSE
assign_directions/: CMakeLists.txt  assign_dirs.c  test.input  test1.input
brctl_netlink/: CMakeLists.txt  README.md
brctl_netlink/src/: brctl_netlink.c  brctl_netlink.h
find_minimum/: CMakeLists.txt  find_minimum.c
rest_client/: CMakeLists.txt  README.md  rest_client.c
slkq/: CMakeLists.txt  README.md
slkq/common/: atomic_io.h  slkq.h
slkq/kernel/: slkq.c
slkq/tests/: test1.sh  test2.sh
slkq/user/: atomic_io.h  log.c  log.h  slkq_reader.c  slkq_write.c
yatp/: CMakeLists.txt  yatp.c  yatp.h  yatp_test.c
